🎯🍐 Updated with Glitch

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <script src="/script.js" defer></script>
   </head>
   
-  <title>Homepage</title>
+  <title>Contact Me</title>
   
   <body>
     <!-- top nav -->
@@ -24,14 +24,20 @@
     </div>
     <div>
       <h1>
-        Welcome!
+        Contact Me
       </h1>
-      <img
-        src="https://cdn.glitch.me/219a0976-add3-4cba-aca9-93edf926f65c%2Fventi_cheer.png?v=1636418943029"
-      />
-      <h2>
-        Malinda Lee
-      </h2>
+      <h3> 
+        <a href="https://github.com/Malindahub" target="_blank">GitHub</a> 
+      </h3>
+      <h3>
+        <a href="https://www.linkedin.com/in/malinda-lee-2a2217209/" target="_blank">LinkedIn</a> <br/>  
+      </h3>  
+      <h3>
+        malindalee2020@gmail.com
+      </h3>
+      
+
+      <img src=" " />
     </div>
   </body>
 </html>
